<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.papunetviittoma.SettingsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SearchWordInitText" />

    <EditText
        android:id="@+id/editTextDatabaseImportUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonImportDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextDatabaseImportUrl"
        android:layout_below="@+id/editTextDatabaseImportUrl"
        android:text="@string/InitSearchWordsButtonText" />

    <TextView
        android:id="@+id/textViewStatusInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonImportDatabase"
        android:layout_below="@+id/buttonImportDatabase"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/buttonClearSearchDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/ClearSearchDbButton" />

    <Button
        android:id="@+id/buttonCheckDbStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewStatusInfo"
        android:layout_alignTop="@+id/textViewStatusInfo"
        android:layout_marginTop="16dp"
        android:text="@string/CalculateSearchDbSizeButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCheckDbStatus"
        android:layout_below="@+id/buttonCheckDbStatus"
        android:text="@string/DbInfoWarning" />

</RelativeLayout>